more endpoint documented on swagger and better readme
