# src/controllers/dto/posts.go
@@ -1,0 +1,6 @@
+package dto
+
+type PostCreateDTO struct {
+	Title   string `json:"title" validate:"required"`
+	Content string `json:"content" validate:"required"`
+}
